<!--
  ~ Copyright 2020 Korti
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Muffle</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="muffle_status">Status: %s</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_disable">Disable</string>
    <string name="btn_edit">Edit</string>
    <string name="title_activity_add_muffle_point">Create</string>
    <string name="label_name">Name</string>
    <string name="label_range">Range (%d m)</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="label_media">Media</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_alarm">Alarm</string>
    <string name="action_save">Save</string>
    <string name="title_activity_edit_muffle_point">Edit</string>
    <string name="label_enable">Enable</string>
    <string name="btn_delete">Delete</string>
    <string name="title_activity_select_muffle_point">Select point</string>
    <string name="hint_search">Search on map…</string>
    <string name="location_search_url">https://photon.komoot.de/api/?q=%s</string>
    <string name="muffle_point_status_disabled">Disabled</string>
    <string name="muffle_point_status_active">In area and active</string>
    <string name="muffle_point_status_not_active">Not in area</string>
    <string name="muffle_point_status_in_area">In area and not active</string>
    <string name="muffle_point_status_unknown">Unknown</string>
    <string name="audio_levels_preferences_key">io.korti.muffle.audio.levels</string>
    <string name="notification_title">Muffle point active</string>
    <string name="notification_text">Muffle point %s is currently active.</string>
    <string name="notification_channel_name">Active Muffle Points</string>
    <string name="notification_channel_description">Notification channel for the low priority notifications to show that a muffle point is active</string>
    <string name="toast_position_selected">Position selected.</string>
    <string name="toast_muffle_point_added">New muffle point added.</string>
    <string name="toast_muffle_point_deleted">Deleted muffle point.</string>
    <string name="toast_muffle_point_edited">Edited muffle point saved.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_info">Info</string>
    <string name="settings_entry_app_info">App-Info</string>
    <string name="title_activity_app_info">App Info</string>
    <string name="label_version">Version %s</string>
    <string name="btn_licenses">Licenses</string>
    <string name="ok">Ok</string>
    <string name="title_activity_open_source_licenses">Open Source Licenses</string>
</resources>
